chore(debug): add launch.json

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,15 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "pwa-node",
+            "name": "Debug via NPM",
+            "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "skipFiles": [
-                "<node_internals>/**"
+            "cwd": "${workspaceRoot}",
+            "runtimeExecutable": "npm",
+            "runtimeArgs": [
+                "run-script", "start"
             ],
-            "program": "${workspaceFolder}\\index.js"
+            "port": 5858
         }
     ]
 }
