--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "sequelize": "^6.6.2",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3"
   }
 }
