chore(debug): update debug config file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,10 @@
             "cwd": "${workspaceRoot}",
             "runtimeExecutable": "npm",
             "runtimeArgs": [
-                "run-script", "start"
+                "run-script",
+                "start"
             ],
+            "outputCapture": "std",
             "port": 5858
         }
     ]
