--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
