--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2",
     "swagger-ui-express": "^4.1.6",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   }
 }
