--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-APP_ENV=''
-APP_NAME=''
+APP_ENV=
+APP_NAME=
+APP_URL=
 PORT=
 
 DB_CONNECTION_LIMIT=
-DB_USER=''
-DB_PASSWORD=''
-DB_NAME=''
-DB_HOST=''
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
+DB_HOST=
