--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.6.2",
     "swagger-ui-express": "^4.1.6",
     "validatorjs": "^3.22.1",
