--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "homepage": "https://github.com/carlosarroyoam/nodejs-api#readme",
   "devDependencies": {
     "eslint": "^7.24.0",
-    "nodemon": "^2.0.7",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "jest": "^26.4.2"
+    "eslint-plugin-security": "^1.4.0",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
     "awilix": "^4.3.3",
