--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "nodejs-api",
-  "version": "1.0.0",
-  "description": "Node.js and Express API",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/carlosarroyoam/nodejs-api.git"
-  },
-  "keywords": [
-    "nodejs",
-    "express-js",
-    "mysql",
-    "api"
-  ],
-  "author": "Carlos Alberto Arroyo Martínez",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/carlosarroyoam/nodejs-api/issues"
-  },
-  "homepage": "https://github.com/carlosarroyoam/nodejs-api#readme",
-  "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-security": "^1.4.0",
-    "jest": "^26.4.2",
-    "nodemon": "^2.0.7"
-  },
-  "dependencies": {
-    "awilix": "^4.3.3",
-    "bcrypt": "^5.0.1",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2",
-    "swagger-ui-express": "^4.1.6",
-    "validatorjs": "^3.22.1",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
-  }
+    "name": "nodejs-api",
+    "version": "1.0.0",
+    "description": "Node.js and Express API",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/carlosarroyoam/nodejs-api.git"
+    },
+    "keywords": [
+        "nodejs",
+        "express-js",
+        "mysql",
+        "api"
+    ],
+    "author": "Carlos Alberto Arroyo Martínez",
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/carlosarroyoam/nodejs-api/issues"
+    },
+    "homepage": "https://github.com/carlosarroyoam/nodejs-api#readme",
+    "devDependencies": {
+        "eslint": "^7.24.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-security": "^1.4.0",
+        "jest": "^26.4.2",
+        "nodemon": "^2.0.7"
+    },
+    "dependencies": {
+        "awilix": "^4.3.3",
+        "bcrypt": "^5.0.1",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "express-validator": "^6.12.0",
+        "helmet": "^4.6.0",
+        "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
+        "mysql2": "^2.2.5",
+        "sequelize": "^6.6.2",
+        "swagger-ui-express": "^4.1.6",
+        "winston": "^3.3.3",
+        "winston-daily-rotate-file": "^4.5.5"
+    }
 }
