eslint and prettier format

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,10 +10,7 @@
             "request": "launch",
             "cwd": "${workspaceRoot}",
             "runtimeExecutable": "npm",
-            "runtimeArgs": [
-                "run-script",
-                "start"
-            ],
+            "runtimeArgs": ["run-script", "start"],
             "outputCapture": "std",
             "port": 5858
         }
