--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,7 @@
 {
-  "compilerOptions": {
-    "checkJs": true,
-    "resolveJsonModule": true
-  },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*"
-  ]
+    "compilerOptions": {
+        "checkJs": true,
+        "resolveJsonModule": true
+    },
+    "exclude": ["node_modules", "**/node_modules/*"]
 }
