--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     },
     "homepage": "https://github.com/carlosarroyoam/nodejs-api#readme",
     "devDependencies": {
-        "eslint": "^7.24.0",
-        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint": "^7.29.0",
+        "eslint-config-google": "^0.14.0",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-security": "^1.4.0",
         "jest": "^26.4.2",
-        "nodemon": "^2.0.7"
+        "nodemon": "^2.0.7",
+        "prettier": "^2.3.2"
     },
     "dependencies": {
         "awilix": "^4.3.3",
