--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     "editor.codeActionsOnSave": {
         "source.fixAll": true,
         "source.fixAll.format": true
-    }
+    },
+    "typescript.tsserver.log": "verbose"
 }
