--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,10 @@
 {
     "compilerOptions": {
+        "module": "commonjs",
+        "target": "es6",
         "checkJs": true,
         "resolveJsonModule": true
     },
-    "exclude": ["node_modules", "**/node_modules/*"]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules"]
 }
