--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "homepage": "https://github.com/carlosarroyoam/nodejs-api#readme",
     "devDependencies": {
+        "@types/jest": "^26.0.23",
         "eslint": "^7.29.0",
         "eslint-config-google": "^0.14.0",
         "eslint-config-prettier": "^8.3.0",
