--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,5 +6,5 @@
         "resolveJsonModule": true
     },
     "include": ["src/**/*"],
-    "exclude": ["node_modules"]
+    "exclude": ["./node_modules"]
 }
