--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,5 @@
         "checkJs": true,
         "resolveJsonModule": true
     },
-    "include": ["src/**/*"],
-    "exclude": ["./node_modules"]
+    "exclude": ["node_modules"]
 }
