--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,19 @@
+# App settings:
 APP_ENV=
 APP_NAME=
 APP_URL=
 PORT=
 
+# Database settings:
 DB_CONNECTION_LIMIT=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
 DB_HOST=
 
-JWT_SECRET=
-JWT_EXPIRATION=
+# JWT settings:
+JWT_SECRET_KEY=
+JWT_EXPIRES_IN=
+
+# Bcrypt settings:
 SALT_ROUNDS=
