--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "Node.js and Express API",
     "main": "index.js",
     "scripts": {
-        "start": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node index.js",
+        "dev:start": "nodemon index.js",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
