--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,9 @@ DB_HOST=
 
 # JWT settings:
 JWT_SECRET_KEY=
+JWT_REFRESH_SECRET_KEY=
 JWT_EXPIRES_IN=
+JWT_REFRESH_EXPIRES_IN=
 
 # Bcrypt settings:
 SALT_ROUNDS=
