--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "eslint-plugin-import": "^2.23.4",
         "eslint-plugin-security": "^1.4.0",
         "jest": "^27.0.6",
-        "nodemon": "^2.0.9",
+        "nodemon": "2.0.5",
         "prettier": "^2.3.2"
     },
     "dependencies": {
