--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-fingerprint": "^1.2.2",
         "express-validator": "^6.12.0",
         "helmet": "^4.6.0",
         "jsonwebtoken": "^8.5.1",
