--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
         "source.fixAll": true,
         "source.fixAll.format": true
     },
-    "typescript.tsserver.log": "verbose"
+    "eslint.validate": ["javascript"]
 }
