--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
+        "eslint-plugin-prettier": "^3.4.0",
         "express": "^4.17.1",
         "express-fingerprint": "^1.2.2",
         "express-validator": "^6.12.0",
