--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "source.fixAll": true,
         "source.fixAll.format": true
     },
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "eslint.validate": ["javascript"]
 }
