add password recovery feature

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,11 @@ DB_HOST=
 # JWT settings:
 JWT_SECRET_KEY=
 JWT_REFRESH_SECRET_KEY=
+JWT_PASSWORD_RECOVERY_SECRET_KEY=
 JWT_EXPIRES_IN=
 JWT_REFRESH_EXPIRES_IN=
+JWT_PASSWORD_RECOVERY_EXPIRES_IN=
+
 
 # Bcrypt settings:
 SALT_ROUNDS=
