add validations to .env file

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express-fingerprint": "^1.2.2",
     "express-validator": "^6.13.0",
     "helmet": "^4.6.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "ms": "^2.1.3",
