--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
-  "printWidth": 100,
-  "tabWidth": 2,
+  "singleQuote": true,
   "trailingComma": "es5",
-  "singleQuote": true
+  "printWidth": 100
 }
