--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,7 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    "source.fixAll.format": true
+    "source.fixAll.eslint": true
   },
-  "eslint.validate": ["javascript"]
+  "files.eol": "\n"
 }
