--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev:start": "nodemon index.js",
+    "start:dev": "nodemon index.js",
     "test": "jest"
   },
   "repository": {
@@ -27,13 +27,11 @@
   "devDependencies": {
     "@types/jest": "^26.0.24",
     "eslint": "^7.32.0",
-    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-security": "^1.4.0",
     "jest": "^27.3.1",
-    "nodemon": "2.0.5",
+    "nodemon": "^2.0.19",
     "prettier": "^2.4.1"
   },
   "dependencies": {
