--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"start": "node index.js",
 		"start:dev": "nodemon index.js",
-		"test": "jest"
+		"test": "jest --watchAll --detectOpenHandles"
 	},
 	"repository": {
 		"type": "git",
