--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,27 @@
 # App settings:
-APP_ENV=
-APP_NAME=
-APP_URL=
-APP_PORT=
+APP_ENV=development
+APP_NAME=ecommerce
+APP_URL=http://localhost
+APP_PORT=3000
 
 # Database settings:
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_HOST=
-DB_PORT=
-DB_CONNECTION_LIMIT=
+DB_USER=root
+DB_PASSWORD=toor
+DB_NAME=ecommerce
+DB_HOST=localhost
+DB_PORT=3306
+DB_CONNECTION_LIMIT=20
 
 # JWT settings:
-JWT_SECRET_KEY=
-JWT_EXPIRES_IN=
+JWT_SECRET_KEY=secret
+JWT_EXPIRES_IN=15m
 
-JWT_REFRESH_SECRET_KEY=
-JWT_REFRESH_EXPIRES_IN=
+JWT_REFRESH_SECRET_KEY=refreshsecret
+JWT_REFRESH_EXPIRES_IN=1d
 
-JWT_PASSWORD_RECOVERY_SECRET_KEY=
-JWT_PASSWORD_RECOVERY_EXPIRES_IN=
+JWT_PASSWORD_RECOVERY_SECRET_KEY=recoverysecret
+JWT_PASSWORD_RECOVERY_EXPIRES_IN=15m
 
 # Bcrypt settings:
-SALT_ROUNDS=
+SALT_ROUNDS=10
+
