--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # App settings:
-APP_ENV=development
-APP_NAME=ecommerce
-APP_URL=http://localhost
+APP_ENV=dev
+APP_NAME=e-commerce-backend
+APP_HOST=http://localhost
 APP_PORT=3000
 
 # Database settings:
