update dockerignore, dockerfile, compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -37,6 +37,7 @@ services:
       - JWT_REFRESH_EXPIRES_IN=${JWT_REFRESH_EXPIRES_IN}
       - JWT_PASSWORD_RECOVERY_SECRET_KEY=${JWT_PASSWORD_RECOVERY_SECRET_KEY}
       - JWT_PASSWORD_RECOVERY_EXPIRES_IN=${JWT_PASSWORD_RECOVERY_EXPIRES_IN}
+      - SALT_ROUNDS=${SALT_ROUNDS}
     depends_on:
       - ecommerce-mysql
 
