--- a/.dockerignore
+++ b/.dockerignore
@@ -1,20 +1,39 @@
-# Dependency directories
-node_modules/
+# Include any files or directories that you don't want to be copied to your
+# container here (e.g., local build artifacts, temporary files, etc.).
+#
+# For more help, visit the .dockerignore file reference guide at
+# https://docs.docker.com/engine/reference/builder/#dockerignore-file
 
-# Env files
-.env
-.env.example
-
-# Docker files
-compose.yaml
-Dockerfile
-
-# vscode configs
-.vscode/
-
-# Database script files
-*.sql
-
-# Logs
-logs/
-*.log
+**/.classpath
+**/.dockerignore
+**/.env
+**/.git
+**/.gitignore
+**/.project
+**/.settings
+**/.toolstarget
+**/.vs
+**/.vscode
+**/.next
+**/.cache
+**/*.*proj.user
+**/*.dbmdl
+**/*.jfm
+**/charts
+**/docker-compose*
+**/compose*
+**/Dockerfile*
+**/node_modules
+**/npm-debug.log
+**/obj
+**/secrets.dev.yaml
+**/values.dev.yaml
+**/build
+**/dist
+**/*.editorconfig
+**/*.env.example
+**/*.sql
+**/logs
+**/*.log
+LICENSE
+README.md
